--- a/Konstruct/Common/Graphics/Graphics.vcproj
+++ b/Konstruct/Common/Graphics/Graphics.vcproj
@@ -184,6 +184,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\kpgTerrainModel.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\kpgTexture.cpp"
 				>
 			</File>
@@ -271,6 +275,10 @@
 			</File>
 			<File
 				RelativePath=".\kpgShader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\kpgTerrainModel.h"
 				>
 			</File>
 			<File
